--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
              font:Verdana,'Times New Roman';
              position:;
              top:;
-             width:;
+             width:75%;
              padding-left: 10px;
              padding-bottom: 30px;
          }
@@ -270,7 +270,7 @@
             <input type="checkbox" name="Carpel_tunnel_syndrome" value="Carpel tunnel syndrome">Carpel tunnel syndrome<br />
       </section>
             <br /><br />
-      <section class="chkbx2">
+      <section class="chkbx1">
             <h3>*Vita-C&reg;</h3>
             <input type="checkbox" name="Virus_prone" value="Virus prone">I catch ever virus<br />
             <input type="checkbox" name="Chronic_infections" value="Chronic infections">Chronic infections<br />
@@ -296,7 +296,7 @@
             <input type="checkbox" name="High_cholesterol" value="High cholesterol">High cholesterol<br />
       </section> 
             <br /><br />    
-      <section class="chkbx3">
+      <section class="chkbx1">
             <h3>Energizing Soy Protein</h3>
             <input type="checkbox" name="No_energy" value="No energy">No energy<br />
             <input type="checkbox" name="Poor_muscle_tone" value="Poor muscle tone">Poor muscle tone<br />
@@ -316,7 +316,7 @@
             <input type="checkbox" name="Fibromyalgia" value="Fibromyalgia">Fibromyalgia<br />
       </section>
             <br /><br />
-      <section class="chkbx4">
+      <section class="chkbx1">
             <h3>*CarotoMax&reg;/FlavoMax&reg;</h3>
             <input type="checkbox" name="Respiratory_infections" value="Respiratory infections">Respiratory infections<br />
             <input type="checkbox" name="Bronchitis_Pneumonia" value="Bronchitis/Pneumonia">Bronchitis/Pneumonia<br />
@@ -334,7 +334,7 @@
             <input type="checkbox" name="Low_energy_fatigue_stress" value="Low energy/fatigue/stress">Low energy/fatigue/stress<br />
       </section> 
             <br /><br />     
-        <section class="chkbx5">
+        <section class="chkbx1">
             <h3>Alfalfa Complex</h3>
             <input type="checkbox" name="Arthritis_joint_pain" value="Arthritis and joint pain">Arthritis and joint pain<br />
             <input type="checkbox" name="Sinus_infections" value="Sinus infections">Sinus infections<br />
@@ -354,7 +354,7 @@
             <input type="checkbox" name="Menopausal_symptoms" value="Menopausal symptoms">Menopausal symptoms<br />                     
          </section>
             <br /><br />
-        <section class="chkbx6">
+        <section class="chkbx1">
             <h3>Menopause Balance Complex</h3>
             <input type="checkbox" name="Hot_flashes" value="Hot flashes">Hot flashes<br />
             <input type="checkbox" name="Sleep_disturbances" value="Sleep disturbances">Sleep disturbances<br />
@@ -377,7 +377,7 @@
             <input type="checkbox" name="Quick_fix" value="Quick fix">Quick fix at the first sign of a cold<br />             
          </section>
             <br /><br />
-        <section class="chkbx7">
+        <section class="chkbx1">
             <h3>Garlic Complex</h3>
             <input type="checkbox" name="Blood_clots_aneurisms" value="Blood clots/aneurisms">Blood clots/aneurisms<br />
             <input type="checkbox" name="Viral_bacterial_infections2" value="Viral,bacterial infections">Viral, bacterial infections<br />
@@ -395,7 +395,7 @@
             <input type="checkbox" name="Gum_disease" value="Gum disease">Gum disease<br /> 
          </section>
             <br /><br />
-        <section class="chkbx8">
+        <section class="chkbx1">
             <h3>*OmegaGuard&reg;</h3>
             <input type="checkbox" name="High_triglycerides" value="High triglycerides">High triglycerides<br />
             <input type="checkbox" name="High_blood_pressure" value="High blood pressure">High blood pressure<br />
@@ -417,7 +417,7 @@
             <input type="checkbox" name="Hep_C2" value="Hepatitis C">Hepatitis C<br />
        </section>
             <br /><br />
-       <section class="chkbx9">
+       <section class="chkbx1">
             <h3>CorEnergy&reg;</h3>
             <input type="checkbox" name="Burn_the_candle" value="Burn the candle">Burn the candle at both ends<br />
             <input type="checkbox" name="Recurrent_fatigue" value="Recurrent fatigue">Recurrent fatigue<br />
@@ -441,7 +441,7 @@
             <input type="checkbox" name="Headaches/anxiety" value="Headaches/anxiety">Headaches/anxiety<br />
       </section>
             <br /><br />
-       <section class="chkbx10">
+       <section class="chkbx1">
             <h3>Liver DTX Complex</h3>
             <input type="checkbox" name="Liver damage" value="Liver damage">Liver damage<br />
             <input type="checkbox" name="Hepatitis/cirrhosis" value="Hepatitis/cirrhosis">Hepatitis/cirrhosis<br />
@@ -464,7 +464,7 @@
             <input type="checkbox" name="Kidney/urinary infections" value="Kidney/urinary infections">Kidney/urinary infections<br />
       </section>
             <br /><br />
-       <section class="chkbx11">
+       <section class="chkbx1">
             <h3>Joint Health Complex</h3>
             <input type="checkbox" name="Osteoarthritis" value="Osteoarthritis">Osteoarthritis<br />
             <input type="checkbox" name="Sports injuries" value="Sports injuries">Sports injuries<br />
@@ -484,7 +484,7 @@
             <input type="checkbox" name="Yo-yo dieter" value="Yo-yo dieter">Yo-yo dieter<br />            
       </section>
                 <br /><br />
-      <section class="chkbx12">
+      <section class="chkbx1">
             <h3>*Optiflora&reg; Probiotic Complex</h3>
             <input type="checkbox" name="Frequent antibiotic use" value="Frequent antibiotic use">Frequent antibiotic use<br />
             <input type="checkbox" name="Ear and throat infections" value="Ear and throat infections">Ear and throat infections<br />
