--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       section.para{
              text-align: justify;
              position: relative;
-             width:;
+             width:75%;
              left:;
          }
          
@@ -242,9 +242,9 @@
       </section>
       <section class="para"><a href="https://thesphericistscom.ipage.com/fitforlife/docs/Fit For Life Symptom Assessment.pdf" target="_new">Download the PDF version of the questionnaire to fill out later.</a></section>
 
-      <section class="pos_fixed_pic">
+      <!--section class="pos_fixed_pic">
          <img class="RDJ" src="https://thesphericistscom.ipage.com/fitforlife/img/RDJ_Fit4Life_2.jpg" width=15% height=15%>
-      </section>
+      </section-->
 
         
       <form class="qForm" method="post" action="https://www.envirotestlaboratories.com/qFormData.php">
