--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     
  
     <style>
+      #body{
+            device-width: 320;
+        }
       .chkbx1{
              border: groove;
              border-color: green;
