--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="width=device-width, initial-scale=0.75">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalabale=No">
     <meta name="apple-mobile-web-app-capable" content="yes">   
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
